log
Sun 24 Mar 2024 05:27:35 PM UTC: 
 tests:  0|5
total_score: 0/70
6fba95e
Sun 24 Mar 2024 05:32:14 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1118869
Sun 24 Mar 2024 05:32:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
fa389fb
Sun 24 Mar 2024 05:32:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4ced5a1
Sun 24 Mar 2024 05:33:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
088a970
Sun 24 Mar 2024 05:33:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
01bea90
Sun 24 Mar 2024 05:34:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
5c28253
Sun 24 Mar 2024 05:37:55 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
555df1f
Sun 24 Mar 2024 06:09:48 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cb496f3
Sun 24 Mar 2024 11:08:00 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
2844415
Sun 24 Mar 2024 11:20:17 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
90f7bfe
Sun 24 Mar 2024 11:21:06 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:117:3: error: implicit declaration of function ‘free_stack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  117 |   free_stack(P3);
      |   ^~~~~~~~~~
      |   create_stack
cc1: all warnings being treated as errors
Compilation failed
1a19eb9
Sun 24 Mar 2024 11:21:15 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
45da69b
Sun 24 Mar 2024 11:21:32 PM UTC: 
 exercises.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
 tests:  3|2
total_score: 40/70
47308c9
